# clinical-osce-agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  start-admin.py  start-dev.py  项目开发文档.md
services/api/: Dockerfile  pyproject.toml
services/api/app/: main.py
services/api/app/graph/: __init__.py  osce_graph.py
services/api/app/models/: __init__.py  case.py  rubric.py
services/api/app/services/: agent_state_service.py  anthropic_chat_client.py  auth_store.py  chroma_retriever.py  coach_agent.py  report_store.py  (+34 more)
services/api/scripts/: seed_demo_data.py
services/api/tests/: conftest.py  test_admin_api.py  test_agent_state.py  test_auth.py  test_case_validation_report.py  test_case_validator.py  test_cases_api.py  test_coach_agent.py  test_dynamic_teaching_focus_service.py  test_evaluation_result_store.py  test_evaluation_runner.py  test_gemini_patient_responder.py  test_knowledge_recommender.py  test_openai_compatible_chat_client.py  test_osce_graph.py  test_osce_sessions.py  test_report_store.py  test_retrieval_eval.py  test_retrieval_index.py  test_rule_evaluator.py  test_source_retriever.py  test_startup_config.py  test_student_model_config_api.py  test_training_event_store.py  test_training_insight_service.py  test_training_skill_auto_approval_service.py  test_training_skill_candidate_service.py  test_training_skill_candidate_store.py  test_training_skill_effect_service.py  test_training_skill_regression_gate.py  test_training_skill_store.py  test_turn_intent_agent.py  test_vertex_embedding_retriever.py  test_vertex_gemini_scorer.py
(+62 files in other folders)
