[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-osce-api"
version = "0.1.0"
description = "FastAPI and LangGraph backend for 临境 OSCE 智能体（TraceOSCE）"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "langgraph>=0.6.0,<1.0.0",
  "langchain-anthropic>=0.3.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "sqlmodel>=0.0.22,<1.0.0",
  "chromadb>=1.0.0,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "google-genai>=1.33.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "huggingface-hub>=0.35.0,<1.0.0",
  "datasets>=4.0.0,<5.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pyarrow>=20.0.0,<30.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
